# radis-client

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CONTRIBUTING.md  README.md  cli.py  docker-compose.yaml  example.env  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: ci.yml  publish.yml
notebooks/: radis_client.ipynb
radis_client/: client.py  tasks.py
radis_client/utils/: testing_helpers.py
tests/: conftest.py  test_client.py
