[tool.poetry]
name = "radis-client"
version = "0.1.0"
description = "RADIS client library to connect to a RADIS server."
authors = ["Kai Schlamp <kai.schlamp@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "radis_client" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
