[tool.poetry]
name = "radis-client"
version = "0.0.0"
description = "RADIS client library to connect to a RADIS server."
authors = ["Kai Schlamp <kai.schlamp@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "radis_client" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
adit-radis-shared = { git = "https://github.com/openradx/adit-radis-shared.git", tag = "0.9.6", python = ">=3.12,<4.0" }
invoke = "^2.2.0"
ipykernel = "^6.29.0"
ipython = "^8.21.0"
pyright = "^1.1.349"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-django = "^4.8.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
python-dotenv = "^1.0.1"
radis = { git = "https://github.com/openradx/radis.git", tag = "0.1.0", python = ">=3.12,<4.0" }
ruff = "^0.8.3"

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I"]

[tool.pyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "radis.settings.production"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
env = [
    "DATABASE_URL=psql://postgres:postgres@localhost:5432/postgres",
    "DBBACKUP_STORAGE_LOCATION=/backups",
    "DJANGO_ADMIN_EMAIL=admin@localhost",
    "DJANGO_ADMIN_FULL_NAME=ADIT-Admin",
    "DJANGO_ALLOWED_HOSTS=localhost",
    "DJANGO_CSRF_TRUSTED_ORIGINS=localhost",
    "DJANGO_EMAIL_URL=smtp://adit@localhost",
    "DJANGO_SECRET_KEY=dummy",
    "DJANGO_SERVER_EMAIL=adit@localhost",
    "DJANGO_STATIC_ROOT=.",
    "POSTGRES_PASSWORD=postgres",
    "LLAMACPP_URL=http://llamacpp.local:8080",
    "SITE_DOMAIN=localhost",
    "SITE_NAME=ADIT",
    "SITE_USES_HTTPS=false",
    "SUPERUSER_AUTH_TOKEN=dummy",
    "SUPERUSER_EMAIL=superuser@localhost",
    "SUPERUSER_USERNAME=superuser",
    "SUPERUSER_PASSWORD=dummy",
    "SUPPORT_EMAIL=support@localhost",
    "TOKEN_AUTHENTICATION_SALT=dummy",
    "USER_TIME_ZONE=UTC",
]
log_cli = 0
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["integration: mark a test as an integration test."]
filterwarnings = [
    "ignore:'cgi' is deprecated:DeprecationWarning",
    "ignore:.*No directory at.*staticfiles.*:UserWarning",
    "ignore:.*Converter 'drf_format_suffix' is already registered.*",
    "ignore:.*pkg_resources is deprecated as an API.*",
    "ignore:.*Deprecated call to `pkg_resources.declare_namespace\\('zope'\\)`.*",
]

[tool.coverage.run]
branch = true
source = ["radis_client"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.poetry-dynamic-versioning]
enable = true
pattern = '(?P<base>\d+(\.\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\d+)?))?$'

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
